feat: implement hover

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -13,7 +13,22 @@
     <div class="main_title"><span class="main_title__header">CSS Bayan</span></div>
 
     <div class="main_bayan">
-      
+      <div class="main_bayan_lines">
+        <div class="main_bayan_lines__mem">
+          <div>The first meme</div>
+          <img src ="./pic/meme_1.jpg" class="main_bayan_lines_pic">
+        </div>
+        <div class="main_bayan_lines__mem">
+          <span>The second meme</span> <img src ="">
+        </div>
+        <div class="main_bayan_lines__mem">
+          <span>The third meme</span> <img src ="">
+        </div>
+        <div class="main_bayan_lines__mem"></div>
+        <div class="main_bayan_lines__mem"></div>
+        <div class="main_bayan_lines__mem"></div>
+      </div>
+
     </div>
 
   </main>
