feat: add CSS variables

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -24,9 +24,9 @@
         <div class="main_bayan_lines__mem">
           <span>The third meme</span> <img src ="">
         </div>
-        <div class="main_bayan_lines__mem"></div>
-        <div class="main_bayan_lines__mem"></div>
-        <div class="main_bayan_lines__mem"></div>
+        <div class="main_bayan_lines__mem"><span>The fourth meme</span><img src =""></div>
+        <div class="main_bayan_lines__mem"><span>The fifth meme</span><img src =""></div>
+        <div class="main_bayan_lines__mem"><span>The sixth meme</span><img src =""></div>
       </div>
 
     </div>
