fix: remove problems of layout interactive

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -10,27 +10,46 @@
 <body>
   <main class="main">
 
+    <!-- Заголовок и прочая скукота -->
     <div class="main_title"><span class="main_title__header">CSS Bayan</span></div>
 
+
+    <!-- А вот тут главное веселье и чертовщина -->
     <div class="main_bayan">
       <div class="main_bayan_lines">
+
         <div class="main_bayan_lines__mem">
-          <div>The first meme</div>
+          <span>The first meme</span>
           <img src ="./pic/meme_1.jpg" class="main_bayan_lines_pic">
         </div>
+
         <div class="main_bayan_lines__mem">
-          <span>The second meme</span> <img src ="">
+          <span>The second meme</span> 
+          <img src ="./pic/meme_2.jpg" class="main_bayan_lines_pic">
         </div>
+
         <div class="main_bayan_lines__mem">
-          <span>The third meme</span> <img src ="">
+          <span>The third meme</span>
+          <img src ="./pic/meme_3.jpg" class="main_bayan_lines_pic">
         </div>
-        <div class="main_bayan_lines__mem"><span>The fourth meme</span><img src =""></div>
-        <div class="main_bayan_lines__mem"><span>The fifth meme</span><img src =""></div>
-        <div class="main_bayan_lines__mem"><span>The sixth meme</span><img src =""></div>
+
+        <div class="main_bayan_lines__mem">
+          <span>The fourth meme</span>
+          <img src ="./pic/meme_1.jpg" class="main_bayan_lines_pic">
+        </div>
+
+        <div class="main_bayan_lines__mem">
+          <span>The fifth meme</span>
+          <img src ="./pic/meme_1.jpg" class="main_bayan_lines_pic">
+        </div>
+
+        <div class="main_bayan_lines__mem">
+          <span>The sixth meme</span>
+          <img src ="./pic/meme_1.jpg" class="main_bayan_lines_pic">
+        </div>
+
       </div>
-
     </div>
-
   </main>
 
 </body>
