feat: add smooth reactions on hover

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -20,12 +20,12 @@
 
         <div class="main_bayan_lines__mem">
           <span>The first meme</span>
-          <img src ="./pic/meme_1.jpg" class="main_bayan_lines_pic">
+          <img src ="./pic/meme_1.png" class="main_bayan_lines_pic">
         </div>
 
         <div class="main_bayan_lines__mem">
           <span>The second meme</span> 
-          <img src ="./pic/meme_2.jpg" class="main_bayan_lines_pic">
+          <img src ="./pic/meme_2.png" class="main_bayan_lines_pic">
         </div>
 
         <div class="main_bayan_lines__mem">
@@ -35,17 +35,17 @@
 
         <div class="main_bayan_lines__mem">
           <span>The fourth meme</span>
-          <img src ="./pic/meme_1.jpg" class="main_bayan_lines_pic">
+          <img src ="./pic/meme_4.jpg" class="main_bayan_lines_pic">
         </div>
 
         <div class="main_bayan_lines__mem">
           <span>The fifth meme</span>
-          <img src ="./pic/meme_1.jpg" class="main_bayan_lines_pic">
+          <img src ="./pic/meme_5.jpg" class="main_bayan_lines_pic">
         </div>
 
         <div class="main_bayan_lines__mem">
           <span>The sixth meme</span>
-          <img src ="./pic/meme_1.jpg" class="main_bayan_lines_pic">
+          <img src ="./pic/meme_6.png" class="main_bayan_lines_pic">
         </div>
 
       </div>
