fix: change to input Radio

--- a/cssBayan/index2.html
+++ b/cssBayan/index2.html
@@ -8,21 +8,11 @@
     <title>CSS Bayan. By AlexMingal</title>
   </head>
 
-df
-<li>43</li>
-<li>dfва</li>
-
   <body>
-    <main class="main">
+    <!-- <main class="main"> -->
 
-      <!-- Заголовок и прочая скукота -->
-      <div class="main_title">
-        <span class="main_title__header">CSS Bayan</span>
-      </div>
+      <div class="faq">
 
-      <!-- А вот тут главное веселье и чертовщина -->
-
-      <div class="main_bayan">
         <div class="faq-item">
           <label class="faq-title" for="faq_1">Mem number 1</label>
           <input class="faq-input" type="radio" name="faq" id="faq_1">
@@ -30,11 +20,18 @@ df
             <img src ="./pic/meme_1.png">
           </div>
         </div>
-        
-       
+
+        <div class="faq-item">
+          <label class="faq-title" for="faq_2">Mem number 2</label>
+          <input class="faq-input" type="radio" name="faq" id="faq_2">
+          <div class="main_bayan_lines_pic">
+            <img src ="./pic/meme_1.png">
+          </div>
+        </div>
+
       </div>
-    </main>
-  
+
+    <!-- </main> -->
 
   </body>
 </html>
